# nova-launch

./: .gitignore  ACCESSIBILITY_TESTING_GUIDE.md  ANIMATION_POLISH_COMPLETE.md  BURN_DOCUMENTATION_CHECKLIST.md  BURN_DOCUMENTATION_SUMMARY.md  BURN_FEATURE_DOCS.md  BURN_MIGRATION_GUIDE.md  BURN_SECURITY.md  BURN_TESTS_IMPLEMENTATION.md  COMMIT_MESSAGE.txt  CONFLICT_AND_CI_REPORT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  INLINE_DOCUMENTATION_SUMMARY.md  OPTIMIZATION_CHECKLIST.md  PERFORMANCE_IMPLEMENTATION_SUMMARY.md  PERFORMANCE_TESTING_CHECKLIST.md  PERFORMANCE_TESTING_COMPLETE.md  PERFORMANCE_TESTING_SUMMARY.md  README.md  STREAM_METADATA_FEATURE.md  WEBHOOK_SYSTEM_SUMMARY.md
contracts/: Cargo.toml
contracts/governance/: Cargo.toml  README.md
contracts/governance/proptest-regressions/: vote_accounting_test.txt
contracts/governance/src/: lib.rs  storage.rs  test.rs  types.rs  vote_accounting_test.rs
contracts/token-factory/: BATCH_TOKEN_CREATION_COMPLETE.md  BURN_TYPES_ADDITIONS.md  CHECKLIST.txt  Cargo.toml  DIFFERENTIAL_TESTING_IMPLEMENTATION.txt  DIFFERENTIAL_TESTING_QUICK_START.txt  FUZZ_TEST_FINDINGS.md  IMPLEMENTATION_SUMMARY.txt  INLINE_DOCS_TEMPLATE.rs  MINT_TOKENS_COMPLETE.md  MINT_TOKENS_IMPLEMENTATION.md  MINT_TOKENS_QUICK_REF.md  PROPERTY_TESTS.md  README.md  SOAK_TESTS_COMPLETE.md  SOAK_TESTS_GUIDE.md  SOAK_TESTS_QUICK_REF.md  TESTING.md  libconcurrent_interleaving_test.rlib  libstateful_cross_feature_fuzz.rlib  run-property-tests.sh  run-stateful-model-tests.sh  run_differential_tests.sh  verify-metadata.sh  verify-stream-claim-parity.sh  verify-two-step-admin.sh
contracts/token-factory/.cargo/: mutants.toml
contracts/token-factory/docs/: MUTATION_TESTING_IMPLEMENTATION_SUMMARY.md  MUTATION_TESTING_RESULTS.md  STREAM_MIGRATION_PLAN.md  STREAM_MIGRATION_SUMMARY.md
contracts/token-factory/examples/: governance_examples.rs  set_metadata_example.rs
contracts/token-factory/proptest-regressions/: burn_property_test.txt  fuzz_update_fees.txt  governance_property_test.txt
contracts/token-factory/src/: admin_burn_test.rs  admin_transfer_test.rs  adversarial_timing_test.rs  arithmetic_boundary_tests.rs  atomic_token_creation_test.rs  auth_fuzz_test.rs  batch_claim_test.rs  batch_mint_test.rs  bench_test.rs  boundary_chaos_test.rs  (+126 more)
(+946 files in other folders)
