[workspace]
members = ["token-factory", "governance"]
default-members = ["token-factory"]
resolver = "2"

[profile.ci]
inherits = "dev"
opt-level = 1

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
