[package]
name = "token-factory"
version = "0.1.0"
edition = "2021"
autoexamples = false
autotests = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { version = "23.0.0", features = ["hazmat-address"] }

[dev-dependencies]
soroban-sdk = { version = "23.0.0", features = ["testutils", "hazmat-address"] }
proptest = "1.4"

[features]
legacy-tests = []

# Proptest configuration for CI
# Ensures deterministic, reproducible property test runs
[package.metadata.proptest]
# Use fixed seed for deterministic test runs in CI
rng_algorithm = "chacha"
# Reduce cases for faster CI runs while maintaining coverage
cases = 100
# Maximum shrink iterations for failure minimization
max_shrink_iters = 1000
# Timeout per test case (in milliseconds)
timeout = 5000
